--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -30,8 +30,26 @@
 
 	<body>
 	{% include "includes/navbar.html" %}
-	{{ account_verification_alert|safe }}
 	<main>
+		
+		{% if ADS %}
+			<style>
+				.ads {
+					max-width: 40%;
+				}
+				
+				@media (min-width:801px)  {
+					.ads {
+						max-width: 35%;
+					}
+				}
+			</style>
+			<div class="ads">
+				<script async="async" data-cfasync="false" src="//pl16405437.alternativecpmgate.com/a5a82325576f4300f3eeba835c04e59a/invoke.js"></script>
+				<div id="container-a5a82325576f4300f3eeba835c04e59a"></div>
+			</div>
+		{% endif %}
+		
 		<!-- Barra de navegação (popular / novas perguntas) é adicionada via JavaScript. -->
 <!-- Questões recentes -->
 <section class="card bg-main" id="n_questions" style="display: none">
