--- a/main_app/templates/base/response-content.html
+++ b/main_app/templates/base/response-content.html
@@ -5,7 +5,7 @@
 		<div class="poster-container">
 			<a class="poster-info" href="/user/{{ response.creator.user.username }}">
 				<div class="poster-profile-pic-container">
-					<img width="40px" src="{{ response.creator.avatar.url }}" alt="{{ response.creator.user.username }}">
+					<img src="{{ response.creator.avatar.url }}" alt="{{ response.creator.user.username }}">
 				</div>
 				
 				<div class="poster-text-container">
