--- a/main_app/templates/question.html
+++ b/main_app/templates/question.html
@@ -13,7 +13,7 @@
 		</style>
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css">
 		<script src="/static/js/cookieman.js?v=1"></script>
-		<link rel="stylesheet" href="/static/css/common.css?v=8.1">
+		<link rel="stylesheet" href="/static/css/common.css?v=8.1.1">
 		<script>
 			var cssfn = 'light.css';
 			var cssversion = '?v=5';
@@ -45,7 +45,7 @@
 					<div class="poster-container">
 						<a class="poster-info" href="/user/{{ question.creator.user.username }}">
 							<div class="poster-profile-pic-container">
-								<img title="{{ question.creator.user.username }}" class="poster-profile-pic-popover" width="45px" src="{{ question.creator.avatar.url }}" alt="{{ question.creator.user.username }}">
+								<img title="{{ question.creator.user.username }}" class="poster-profile-pic-popover" src="{{ question.creator.avatar.url }}" alt="{{ question.creator.user.username }}">
 							</div>
 							<div class="poster-text-container">
 								<div>
