--- a/main_app/templates/question.html
+++ b/main_app/templates/question.html
@@ -45,7 +45,7 @@
 					<div class="poster-container">
 						<a class="poster-info" href="/user/{{ question.creator.user.username }}">
 							<div class="poster-profile-pic-container">
-								<img title="{{ question.creator.user.username }}" class="poster-profile-pic-popover" src="{{ question.creator.avatar.url }}" alt="{{ question.creator.user.username }}">
+								<img title="{{ question.creator.user.username }}" class="poster-profile-pic-popover" src="{{ question.creator.avatar.url }}" alt="{{ question.creator.user.username }}" width="45px">
 							</div>
 							<div class="poster-text-container">
 								<div>
