Tam. max de avatar - fix

--- a/static/css/common.css
+++ b/static/css/common.css
@@ -140,12 +140,10 @@ textarea.large-compact {
   padding-right: 6px;
 }
 .poster-profile-pic-container img {
-  min-width: 45px;
+  width: 45px;
   min-height: 20px;
-  max-width: 70px;
   max-height: 70px;
 }
-
 .poster-text-container .r-username {
 	display: block;
 }
