--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -1,5 +1,3 @@
-{% load humanize %}
-{% load main_app_extras %}
 <!doctype html>
 <html lang="pt-br">
 	<head>
@@ -65,56 +63,7 @@
 <section class="card bg-main" id="n_questions">
 	<ul class="list-group list-group-flush">
 		{% for question in recent_questions %}
-			<li class="list-group-item bg-main">
-				<div class="card-body">
-					<h2 class="question-title">
-						<a href="/question/{{ question.id }}">
-							{{ question.text }}
-						</a>
-					</h2>
-					{% if question.description %}
-						<p class='description'>{{ question.description }}</p>
-					{% endif %}
-					<small class="text-muted">
-						<span>respostas: <span id="response-counter-{{ question.id }}">{{ question.total_responses }}</span></span>
-						<span>&nbsp;&middot;&nbsp;</span>
-						<span>perguntado {{ question.pub_date|naturaltime }}</span>
-					</small>
-					<hr>
-					
-					{% if user.is_anonymous %}
-						<p>Faça <a href="/signin?redirect=/question/{{ question.id }}">login</a> ou <a href="/signup?redirect=/question/{{ question.id }}">crie uma conta</a> para responder essa pergunta.</p>
-					{% else %}
-						
-						{% answer user_p question as ANSWER %}
-						{% if ANSWER %}
-							{% include "base/response-content-index.html" %}
-						{% else %}
-							<div class="user-response" data-iddapergunta="{{ question.id }}">
-								<div>
-									<button class="btn btn-outline-primary btn-sm" onclick="$(this).toggle(0); $(this.parentElement.parentElement.nextElementSibling).toggle(0);">
-										<i class="fas fa-share"></i>
-										responder
-									</button>
-								</div>
-							</div>
-							
-							<div style="display: none">
-								<form onsubmit="return enviar_resposta_pergunta(this);">
-									{% csrf_token %}
-									<input type="hidden" name="from" value="index">
-									<input name="question_id" type="hidden" value="{{ question.id }}">
-									<textarea onclick="$(this).css('height', '120px');" name="text" maxlength="5000" class="form-control form-control-sm" placeholder="Sua resposta" required></textarea>
-									<button name="submit_btn" type="submit" class="btn btn-outline-primary btn-sm">
-										<i class="far fa-paper-plane"></i>
-										Enviar
-									</button>
-								</form>
-							</div>
-						{% endif %}
-					{% endif %}
-				</div>
-			</li>
+			{% include "base/pergunta.html" %}
 		{% endfor %}
 	</ul>
 	<a class="btn btn-outline-primary" href="/news?page=" id="next_page_recent_questions">Próxima página</a>
@@ -123,58 +72,10 @@
 
 <!-- Questões populares -->
 <section class="card bg-main" id="p_questions" style="display: none">
+	
 	<ul class="list-group list-group-flush">
 		{% for question in popular_questions %}
-			<li class="list-group-item bg-main">
-				<div class="card-body">
-					<h2 class="question-title">
-						<a href="/question/{{ question.id }}">
-							{{ question.text }}
-						</a>
-					</h2>
-					{% if question.description %}
-						<p class='description'>{{ question.description }}</p>
-					{% endif %}
-					<small class="text-muted">
-						<span>respostas: <span id="response-counter-{{ question.id }}">{{ question.total_responses }}</span></span>
-						<span>&nbsp;&middot;&nbsp;</span>
-						<span>perguntado {{ question.pub_date|naturaltime }}</span>
-					</small>
-					<hr>
-					
-					{% if user.is_anonymous %}
-						<p>Faça <a href="/signin?redirect=/question/{{ question.id }}">login</a> ou <a href="/signup?redirect=/question/{{ question.id }}">crie uma conta</a> para responder essa pergunta.</p>
-					{% else %}
-						
-						{% answer user_p question as ANSWER %}
-						{% if ANSWER %}
-							{% include "base/response-content-index.html" %}
-						{% else %}
-							<div class="user-response" data-iddapergunta="{{ question.id }}">
-								<div>
-									<button class="btn btn-outline-primary btn-sm" onclick="$(this).toggle(0); $(this.parentElement.parentElement.nextElementSibling).toggle(0);">
-										<i class="fas fa-share"></i>
-										responder
-									</button>
-								</div>
-							</div>
-							
-							<div style="display: none">
-								<form onsubmit="return enviar_resposta_pergunta(this);">
-									{% csrf_token %}
-									<input type="hidden" name="from" value="index">
-									<input name="question_id" type="hidden" value="{{ question.id }}">
-									<textarea onclick="$(this).css('height', '120px');" name="text" maxlength="5000" class="form-control form-control-sm" placeholder="Sua resposta" required></textarea>
-									<button name="submit_btn" type="submit" class="btn btn-outline-primary btn-sm">
-										<i class="far fa-paper-plane"></i>
-										Enviar
-									</button>
-								</form>
-							</div>
-						{% endif %}
-					{% endif %}
-				</div>
-			</li>
+			{% include "base/pergunta.html" %}
 		{% endfor %}
 	</ul>
 	
