--- a/main_app/templates/signup.html
+++ b/main_app/templates/signup.html
@@ -22,7 +22,7 @@
 	</head>
 	<body>
 		<main class="signup-form card-body"><br><br>
-			<center id="logo"><img src="/static/images/asker.png" alt="Asker"></center><br>
+			<center id="logo"><a href="/"><img src="/static/images/asker.png" alt="Asker"></a></center><br>
 			
 			{{ error|safe }}
 			{{ invalid_username|safe }}
