--- a/main_app/templates/signin.html
+++ b/main_app/templates/signin.html
@@ -23,7 +23,7 @@
 	<body>
 
 		<main class="signin-form card-body"><br><br>
-			<center id="logo"><img src="/static/images/asker.png" alt="Asker"></center><br>
+			<center id="logo"><a href="/"><img src="/static/images/asker.png" alt="Asker"></a></center><br>
 			
 			{{login_error|safe}}
 			
