--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -100,6 +100,7 @@
 		
 		<div class="navegacao">
 			<button class="btn btn-outline-primary text-uppercase" id="botao-popular">popular</button>
+			&nbsp;
 			<button class="btn btn-outline-primary text-uppercase" id="botao-recentes">recentes</button>
 		</div>
 		<script>
