left-spaced nas barras popular/recentes

--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -100,7 +100,7 @@
 		
 		<div class="navegacao">
 			<button class="btn btn-outline-primary text-uppercase" id="botao-popular">popular</button>
-			<button class="btn btn-outline-primary text-uppercase" id="botao-recentes">recentes</button>
+			<button class="btn btn-outline-primary text-uppercase left-spaced" id="botao-recentes">recentes</button>
 		</div>
 		<script>
 			botao_popular = document.getElementById("botao-popular");
