--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -134,8 +134,11 @@
 			{% include "base/pergunta.html" %}
 		{% endfor %}
 	</ul>
-	<a class="btn btn-outline-primary" href="/news?page=" id="next_page_recent_questions">Próxima página</a>
+	<center>
+		<img src="https://br.asker.fun/static/images/loading.gif" id="carregamento_novas_perguntas" width="15%">
+	</center>
 </section>
+
 <!-- !Questões recentes -->
 
 <!-- Questões populares -->
@@ -156,7 +159,7 @@
 
 <script src="/static/js/linkify/linkify.min.js"></script>
 <script src="/static/js/linkify/linkify-jquery.min.js"></script>
-<script src="/static/js/index.js?v=31.2"></script>
+<script src="/static/js/index.js?v=32"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 <script src="https://kit.fontawesome.com/1f965a8b94.js"></script>
 	</body>
