--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -157,9 +157,34 @@
 <!-- !Questões populares -->
 	</main>
 
+<div class="modal fade" id="question-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <ul class="list-group list-group-flush">
+			<li class="list-group-item">
+				<a class="clickable" href="javascript:void(0);" onclick="silence_user()">
+					<div>
+						Não mostrar perguntas e respostas deste usuário
+					</div>
+				</a>
+			</li>
+		</ul>
+      </div>
+      <div class="modal-footer">
+      </div>
+    </div>
+  </div>
+</div>
+
 <script src="/static/js/linkify/linkify.min.js"></script>
 <script src="/static/js/linkify/linkify-jquery.min.js"></script>
-<script src="/static/js/index.js?v=32.4"></script>
+<script src="/static/js/index.js?v=32.41"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 <script src="https://kit.fontawesome.com/1f965a8b94.js"></script>
 	</body>
