Remoção de menu de silenciamento p/ não-logados

--- a/main_app/templates/base/pergunta.html
+++ b/main_app/templates/base/pergunta.html
@@ -14,9 +14,13 @@
 					</a>
 				</h2>
 
-				<a class="clickable" href="javascript:void(0);" data-toggle="modal" data-target="#question-modal" onclick="select_user('{{ question.creator}}');">
-					<i class="fas fa-ellipsis-h"></i>
-				</a>
+				{% if not user.is_anonymous %}
+					{% if user != question.creator.user %}
+					<a class="clickable" href="javascript:void(0);" data-toggle="modal" data-target="#question-modal" onclick="select_user('{{ question.creator}}');">
+						<i class="fas fa-ellipsis-h"></i>
+					</a>
+					{% endif %}
+				{% endif %}
 
 			</div>
 			{% if question.description %}
