Lista de silenciados

--- a/static/css/common.css
+++ b/static/css/common.css
@@ -95,7 +95,7 @@ textarea.large-compact {
     float: right;
     cursor: pointer;
 }
-#responses-section, #blocked-section {
+#responses-section, #blocked-section, #silenced-section {
 	display: none;
 }
 /* Profile-end */
