--- a/main_app/templates/profile.html
+++ b/main_app/templates/profile.html
@@ -14,7 +14,7 @@
 		</style>
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css">
 		<link href="https://fonts.googleapis.com/css?family=Raleway:400,500,500i,700,800i" rel="stylesheet">
-		<link rel="stylesheet" href="/static/css/common.css?v=8">
+		<link rel="stylesheet" href="/static/css/common.css?v=8.04">
 		<script src="/static/js/cookieman.js?v=1"></script>
 		<script>
 			var cssfn = 'light.css';
@@ -155,6 +155,17 @@
 					})
 				}
 			}
+			function unsilence_listed_user(listEl, username) {
+				if (confirm('Deseja tirar o silêncio de ' + username + '?')) {
+					$.ajax({
+						type: 'get',
+						url: '/user/'+ username +'/silence',
+						complete: function(data) {
+							listEl.remove();
+						}
+					})
+				}
+			}
 		</script>
 
 		{% if user_p.user.username == user.username %}
@@ -173,6 +184,9 @@
 			{% if user_p.user.username == user.username %}
 			<li class="nav-item">
 				<a class="nav-link bg-main-tab activity-tab disabled" id="blocked">Usuários bloqueados</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link bg-main-tab activity-tab disabled" id="silenced">Usuários silenciados</a>
 			</li>
 			{% endif %}
 		</ul>
@@ -225,22 +239,34 @@
 			</div>
 		</section>
 
-			{% if user_p.user.username == user.username %}
-			<section id="blocked-section">
-				<div class="responses-card card bg-main">
-					<ul class="list-group list-group-flush" id="bs">
-						{% for blocked_user in user_p.blocked_users.all %}
-						<li class="list-group-item bg-main blocked-user">
-							<a href="/user/{{ blocked_user }}">{{ blocked_user }}</a> <span onclick="unblock_listed_user(this.parentNode, '{{ blocked_user }}');">❌</span>
-						</li>
-						{% endfor %}
-					</ul>
-				</div>
-			</section>
-			{% endif %}
+		{% if user_p.user.username == user.username %}
+		<section id="blocked-section">
+			<div class="responses-card card bg-main">
+				<ul class="list-group list-group-flush" id="bs">
+					{% for blocked_user in user_p.blocked_users.all %}
+					<li class="list-group-item bg-main blocked-user">
+						<a href="/user/{{ blocked_user }}">{{ blocked_user }}</a> <span onclick="unblock_listed_user(this.parentNode, '{{ blocked_user }}');">❌</span>
+					</li>
+					{% endfor %}
+				</ul>
+			</div>
+		</section>
+
+		<section id="silenced-section">
+			<div class="responses-card card bg-main">
+				<ul class="list-group list-group-flush" id="ss">
+					{% for silenced_user in user_p.silenced_users.all %}
+					<li class="list-group-item bg-main blocked-user">
+						<a href="/user/{{ silenced_user }}">{{ silenced_user }}</a> <span onclick="unsilence_listed_user(this.parentNode, '{{ silenced_user }}');">❌</span>
+					</li>
+					{% endfor %}
+				</ul>
+			</div>
+		</section>
+		{% endif %}
 
 		{% endif %}<br>
-		</main><script src="/static/js/profile.js?v=7"></script>
+		</main><script src="/static/js/profile.js?v=7.1"></script>
 		<script>
 if (getDarkCookie() == 'true') {
 	document.getElementsByClassName('navbar')[0].classList.remove("navbar-light");
