--- a/main_app/templates/NAO_TAO_UTIL/listar_perfil.html
+++ b/main_app/templates/NAO_TAO_UTIL/listar_perfil.html
@@ -2,4 +2,4 @@ nome: {{ up.user.username }}<br>
 pontos: {{ up.total_points }}<br>
 avatar: <img src="{{ up.avatar.url }}" width="60px"><br>
 
-<a href="/user/{{ up.username }}">perfil</a>
+<a href="/user/{{ up.username }}" target="_blank">perfil</a>
