--- a/main_app/templates/NAO_TAO_UTIL/listar_perfil.html
+++ b/main_app/templates/NAO_TAO_UTIL/listar_perfil.html
@@ -3,3 +3,6 @@ pontos: {{ up.total_points }}<br>
 avatar: <img src="{{ up.avatar.url }}" width="60px"><br>
 
 <a href="/user/{{ up.username }}" target="_blank">perfil</a>
+
+
+<a href="/listar_perfis?id={{proximo_id}}">próximo</a>
