--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -11,7 +11,7 @@
 		<script src="/static/js/cookieman.js?v=1"></script>
 		<script>
 			var cssfn = 'light.css';
-			var cssversion = '?v=5';
+			var cssversion = '?v=5.04';
 			if (getDarkCookie() == 'true') { cssfn = 'dark.css'; }
 			var link = document.createElement('link');
 			link.rel = 'stylesheet';
@@ -160,14 +160,14 @@
 <div class="modal fade" id="question-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
-      <div class="modal-header">
+      <div class="modal-header bg-main">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
-      <div class="modal-body">
+      <div class="modal-body bg-main">
         <ul class="list-group list-group-flush">
-			<li class="list-group-item">
+			<li class="list-group-item bg-main">
 				<a class="clickable" href="javascript:void(0);" onclick="silence_user()">
 					<div>
 						Não mostrar perguntas e respostas deste usuário
@@ -176,7 +176,7 @@
 			</li>
 		</ul>
       </div>
-      <div class="modal-footer">
+      <div class="modal-footer bg-main">
       </div>
     </div>
   </div>
