--- a/main_app/templates/profile.html
+++ b/main_app/templates/profile.html
@@ -98,7 +98,7 @@
                         Bloquear
                     {% endif %}
 			</button>
-			<button id="silence-button" class="btn btn-outline-info" onclick="silence_user()">
+			<button id="silence-button" class="btn btn-outline-info left-spaced" onclick="silence_user()">
                     {% if SILENCED %}
                         Tirar silêncio
                     {% else %}
