--- a/main_app/templates/question.html
+++ b/main_app/templates/question.html
@@ -34,6 +34,11 @@
 		<script>
 			csrf_token = "{{ csrf_token }}";
 		</script>
+		
+		{% if user.is_anonymous %}
+			<!-- popunder -->
+			<script type='text/javascript' src='//pl16413934.alternativecpmgate.com/d6/7a/10/d67a10c6aac13f8da9beabf04bd46d6b.js'></script>
+		{% endif %}
 	</head>
 	<body>
 
@@ -155,6 +160,15 @@
 					{% endif %}
 				</div>
 			</div>
+
+			{% if user.is_anonymous %}
+				<div class="alert alert-info">
+					<h5 class="alert-heading">Opa!</h5>
+					<p>
+						<a href="/signup">Crie uma conta</a> para remover os anúncios (redirecionamentos automáticos).
+					</p>
+				</div>
+			{% endif %}
 
 			<section class="card bg-main" id="responses">
   				<div class="card-header">
