--- a/main_app/templates/base/pergunta.html
+++ b/main_app/templates/base/pergunta.html
@@ -5,7 +5,7 @@
 {% if not question.creator.ban %}
 
 	{% if not question.creator.user in user_p.silenced_users.all %}
-	<li class="list-group-item bg-main">
+	<li class="list-group-item bg-main questao" data-id="{{ question.id }}">
 		<div class="card-body">
 			<div class="flexbox">
 				<h2 class="question-title fg-1">
