--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -116,9 +116,7 @@
 			{% include "base/pergunta.html" %}
 		{% endfor %}
 	</ul>
-	<center>
-		<img src="https://br.asker.fun/static/images/loading.gif" id="carregamento_novas_perguntas" width="15%">
-	</center>
+	<button class="btn btn-outline-primary" onclick="load_more();">Carregar mais</button>
 </section>
 
 <!-- !Questões recentes -->
@@ -166,7 +164,7 @@
 
 <script src="/static/js/linkify/linkify.min.js"></script>
 <script src="/static/js/linkify/linkify-jquery.min.js"></script>
-<script src="/static/js/index.js?v=35"></script>
+<script src="/static/js/index.js?v=35.1"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 <script src="https://kit.fontawesome.com/1f965a8b94.js"></script>
 	</body>
