--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -112,7 +112,7 @@
 <!-- Questões recentes -->
 <section class="card bg-main" id="novas_questoes">
 	<ul class="list-group list-group-flush">
-		{% for question in recent_questions %}
+		{% for question in questoes_recentes %}
 			{% include "base/pergunta.html" %}
 		{% endfor %}
 	</ul>
