--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -24,6 +24,8 @@
 		<script>
 			var csrf_token = "{{ csrf_token }}";
 		</script>
+		
+		<script src="/static/js/index.js?v=38"></script>
 	</head>
 
 	<body>
@@ -116,7 +118,7 @@
 			{% include "base/pergunta.html" %}
 		{% endfor %}
 	</ul>
-	<button class="btn btn-outline-primary" onclick="load_more();">Carregar mais</button>
+	<button class="btn btn-outline-primary" onclick="load_more()">Carregar mais</button>
 </section>
 
 <!-- !Questões recentes -->
@@ -164,7 +166,6 @@
 
 <script src="/static/js/linkify/linkify.min.js"></script>
 <script src="/static/js/linkify/linkify-jquery.min.js"></script>
-<script src="/static/js/index.js?v=36.1"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 <script src="https://kit.fontawesome.com/1f965a8b94.js"></script>
 	</body>
