--- a/main_app/templates/question.html
+++ b/main_app/templates/question.html
@@ -222,12 +222,17 @@
 				</div>
 			{% endif %}
 			
+			<!-- Perguntas recomendadas -->
+			
 			<style>
 				.perguntado-a-por {
 					display: block;
 					font-size: smaller;
 				}
 			</style>
+			<script>
+			</script>
+			
 			<br>
 			<div class="card">
 				<div class="card-body">
@@ -243,6 +248,8 @@
 					{% endfor %}
 				</div>
 			</div>
+			
+			<!-- !Perguntas recomendadas -->
 	</main>
 
 		<script src="/static/js/linkify/linkify.min.js"></script>
