--- a/main_app/templates/signin.html
+++ b/main_app/templates/signin.html
@@ -6,7 +6,7 @@
 		<meta name="description" content="Faça login na sua conta do Asker.fun">
 		<meta name="keywords" content="Login, entrar, asker.fun, asker">
 		<title>Fazer login</title>
-		<link rel="stylesheet" href="/static/css/common.css?v=8">
+		<link rel="stylesheet" href="/static/css/common.min.css">
 		<script src="/static/js/cookieman.js?v=1"></script>
 		<script>
 			var cssfn = 'light.css';
