--- a/main_app/templates/delete-account.html
+++ b/main_app/templates/delete-account.html
@@ -9,7 +9,7 @@
 		
 		<title>Apagar sua conta</title>
 
-		<link rel="stylesheet" href="/static/css/common.css?v=8">
+		<link rel="stylesheet" href="/static/css/common.min.css">
 		<script src="/static/js/cookieman.js?v=1"></script>
 		<script>
 			var cssfn = 'light.css';
