--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -7,7 +7,7 @@
 		<meta name="description" content="Faça e responda perguntas na melhor e mais divertida comunidade de perguntas e respostas!">
 		<meta name="keywords" content="br.asker.fun, asker.fun, perguntas, respostas, asker">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
-		<link rel="stylesheet" href="/static/css/common.css?v=8.11">
+		<link rel="stylesheet" href="/static/css/common.min.css">
 		<script src="/static/js/cookieman.js?v=1"></script>
 		<script>
 			var cssfn = 'light.css';
@@ -19,13 +19,10 @@
 			link.href = '/static/css/' + cssfn + cssversion;
 			document.head.appendChild(link);
 		</script>
-
-		<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+		
 		<script>
 			var csrf_token = "{{ csrf_token }}";
 		</script>
-		
-		<script src="/static/js/index.js?v=38"></script>
 	</head>
 
 	<body>
@@ -169,6 +166,8 @@
   </div>
 </div>
 
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="/static/js/index.js?v=38.1"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 <script src="https://kit.fontawesome.com/1f965a8b94.js"></script>
 	</body>
