--- a/main_app/templates/rank.html
+++ b/main_app/templates/rank.html
@@ -7,7 +7,7 @@
 
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css">
 		<link href="https://fonts.googleapis.com/css?family=Raleway:400,500,500i,700,800i" rel="stylesheet">
-<link rel="stylesheet" href="/static/css/common.css?v=8">
+<link rel="stylesheet" href="/static/css/common.min.css">
 		<script src="/static/js/cookieman.js?v=1"></script>
 		<script>
 			var cssfn = 'light.css';
