--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -167,7 +167,7 @@
 </div>
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script src="/static/js/index.js?v=38.1"></script>
+<script src="/static/js/index.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 <script src="https://kit.fontawesome.com/1f965a8b94.js"></script>
 	</body>
