--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -1,3 +1,5 @@
+{% load main_app_extras %}
+{% load humanize %}
 <!doctype html>
 <html lang="pt-br">
 	<head>
@@ -22,6 +24,12 @@
 		
 		<script>
 			var csrf_token = "{{ csrf_token }}";
+			
+			{% if user.is_anonymous %}
+				var user_status = "anonymous";
+			{% else %}
+				var user_status = "logged";
+			{% endif %}
 		</script>
 	</head>
 
@@ -114,11 +122,53 @@
 		</script>
 		
 <!-- Questões recentes -->
-<section class="card bg-main" id="novas_questoes">
-	<ul class="list-group list-group-flush">
+
+<script>
+	
+	/*
+	 * As questões são carregadas em uma variável para depois ser renderizadas
+	 * em JavaScript para aliviar a carga no servidor.
+	 */
+	
+	recent_questions = [
 		{% for question in questoes_recentes %}
-			{% include "base/pergunta.html" %}
+			{% if not question.creator.user in user_p.silenced_users.all %}
+				{
+					"id": {{ question.id }},
+					"text": "{{ question.text }}",
+					"description": "{{ question.description|linebreaksbr }}",
+					"total_answers": {{ question.total_responses }},
+					"pub_date": "{% fix_naturaltime question.pub_date|naturaltime %}",
+					"creator": "{{ question.creator.user.username }}",
+					
+					{% answer user_p question as ANSWER %}
+					"user_answer": "{{ ANSWER|linebreaksbr }}",
+				},
+			{% endif %}
 		{% endfor %}
+	];
+
+	popular_questions = [
+		{% for question in popular_questions %}
+			{% if not question.creator.user in user_p.silenced_users.all %}
+				{
+					"id": {{ question.id }},
+					"text": "{{ question.text }}",
+					"description": "{{ question.description|linebreaksbr }}",
+					"total_answers": {{ question.total_responses }},
+					"pub_date": "{% fix_naturaltime question.pub_date|naturaltime %}",
+					"creator": "{{ question.creator.user.username }}",
+					
+					{% answer user_p question as ANSWER %}
+					"user_answer": "{{ ANSWER|linebreaksbr }}",
+				},
+			{% endif %}
+		{% endfor %}
+	];
+</script>
+
+<section class="card bg-main" id="novas_questoes">
+	<ul class="list-group list-group-flush" id="lista_de_questoes_recentes">
 	</ul>
 	<button class="btn btn-outline-primary" onclick="load_more()">Carregar mais</button>
 </section>
@@ -128,10 +178,7 @@
 <!-- Questões populares -->
 <section class="card bg-main" id="questoes_populares">
 	
-	<ul class="list-group list-group-flush">
-		{% for question in popular_questions %}
-			{% include "base/pergunta.html" %}
-		{% endfor %}
+	<ul class="list-group list-group-flush" id="lista_de_questoes_populares">
 	</ul>
 	
 	<div class="end">
@@ -167,7 +214,7 @@
 </div>
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script src="/static/js/index.min.js"></script>
+<script src="/static/js/index.min.js?v=2"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 <script src="https://kit.fontawesome.com/1f965a8b94.js"></script>
 	</body>
